--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,23 @@
 [tool.poetry]
 name = "kt-line"
 version = "0.1.0"
-description = "Calcula linha de tendencia e linha de canal"
+description = "Ferramenta de linha de comando para calcular linha de tendencia e linha de canal"
 authors = ["Valmir Franca <vfranca3@gmail.com>"]
+license = "GPL-2.0-only"
+readme = "README.md"
+repository = "https://github.com/vfranca/kt-line"
+keywords = ["cli", "trading"]
+classifiers = [
+"Development Status :: 2 - Pre-Alpha",
+"Environment :: Console",
+"Intended Audience :: Financial and Insurance Industry",
+"License :: OSI Approved :: GNU General Public License (GPL)",
+"Natural Language :: Portuguese (Brazilian)",
+"Operating System :: Microsoft :: Windows :: Windows 10",
+"Programming Language :: Python :: 3.9",
+"Topic :: Adaptive Technologies",
+"Topic :: Office/Business :: Financial :: Investment"
+]
 
 [tool.poetry.dependencies]
 python = "^3.9"
