--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "kt-line"
-version = "0.2.0"
+version = "0.3.0"
 description = "Ferramenta de linha de comando para calcular linha de tendencia e linha de canal"
 authors = ["Valmir Franca <vfranca3@gmail.com>"]
 license = "GPL-2.0-only"
@@ -24,8 +24,9 @@ python = "^3.9"
 click = "^7.1.2"
 
 [tool.poetry.dev-dependencies]
-pytest = "^6.2.2"
 mock = "^4.0.3"
+pytest = "^6.2.2"
+black = "^20.8b1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
